Test positioning fix for modal jumping on safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,7 @@ html {
   width: 70vw;
   height: 130vh;
   position: fixed;
+  top: 0;
   left: -70vw;
   background: black;
   transition: .5s ease-out;
@@ -195,6 +196,7 @@ h4 {
 .navModal {
   display: none;
   position: fixed;
+  top: 0;
   width: 100%;
   /* height larger than screen to avoid jumpy scrolling on mobile */
   height: 130vh;
@@ -646,7 +648,9 @@ main {
   width: 100%;
   height: 100%;
   z-index: 999;
-  background-color: rgb(234, 0, 255, .5);
+  background-color: rgb(0, 0, 0, .7);
+  font-family: 'Raleway', sans-serif;
+  color: white;
 }
 
 /* media queries for non-desktop */
